--- a/hw01/index.html
+++ b/hw01/index.html
@@ -201,7 +201,14 @@
   </div>
 
   <!-- ------------------------------------------------>
-
+ <div class="row hw12 bottomrow">
+    <div class="col-md-12 twenty">
+       標註檔連結: 
+       <a href="https://github.com/meimei-lin/ml2025f/raw/refs/heads/main/hw01/110590041.seg.nrrd" download="">
+      https://github.com/meimei-lin/ml2025f/raw/refs/heads/main/hw01/110590041.seg.nrrd
+    </a>
+    </div>
+  </div>
   <!-- ------------------------------------------------>
 
 
@@ -250,4 +257,5 @@
 
 </body>
 </html>
+
 
