--- a/hw01/index.html
+++ b/hw01/index.html
@@ -171,7 +171,7 @@
   <!-- ------------------------------------------------>
   <div class="row hw12">
     <div class="col-md-12 twenty">
-     
+     這次作業是使用3DSilcer來標記一個3D的心臟，這是一個很新奇的體驗。第一次使用這個軟體，然後看著他的教學視頻使用閥值來標記心臟肌肉，不知不覺間就沉迷在修飾邊邊的旅程中去。對一個3d物品的標記慢慢收收補補是一個十分有趣的體驗。尤其是看到自己的成品出來了十分有成就感。
     </div>
   </div>
 
@@ -280,6 +280,7 @@
 
 </body>
 </html>
+
 
 
 
