--- a/hw01/index.html
+++ b/hw01/index.html
@@ -234,7 +234,14 @@
     </a>
   </div>
 </div>
-
+<div class="row hw12 bottomrow">
+  <div class="col-md-12 twenty">
+    YouTube: 
+    <a href="https://github.com/SilC121/ml2025f/raw/refs/heads/main/hw01/110590041.seg.nrrd" download>
+      https://www.youtube.com/watch?v=-f01y5rwThM
+    </a>
+  </div>
+</div>
   <!-- ------------------------------------------------>
 
 
@@ -280,6 +287,7 @@
 
 </body>
 </html>
+
 
 
 
