--- a/hw01/index.html
+++ b/hw01/index.html
@@ -229,8 +229,8 @@
 <div class="row hw12 bottomrow">
   <div class="col-md-12 twenty">
     標註檔連結: 
-    <a href="https://github.com/SilC121/ml2025f/raw/refs/heads/main/hw01/110590041.seg.nrrd" download>
-      https://github.com/SilC121/ml2025f/raw/refs/heads/main/hw01/110590041.seg.nrrd
+    <a href="https://github.com/SilC121/ml2025f/raw/refs/heads/main/hw01/110590041.nii.gz" download>
+      https://github.com/SilC121/ml2025f/raw/refs/heads/main/hw01/110590041.nii.gz
     </a>
   </div>
 </div>
@@ -287,6 +287,7 @@
 
 </body>
 </html>
+
 
 
 
