--- a/hw01/index.html
+++ b/hw01/index.html
@@ -220,7 +220,7 @@
   <div class="row hw12 bottomrow">
     <div class="col-md-12 twenty">
       <div class="video-container">
-      <iframe src="https://www.youtube.com/watch?v=-f01y5rwThM"title="YouTube video player"allowfullscreen></iframe>
+      <iframe src="https://youtu.be/-f01y5rwThM?si=SMCNceHsJ1TRF1B3"title="YouTube video player"allowfullscreen></iframe>
       </div>
     </div>
   </div>
@@ -237,8 +237,8 @@
 <div class="row hw12 bottomrow">
   <div class="col-md-12 twenty">
     YouTube: 
-    <a href="https://github.com/SilC121/ml2025f/raw/refs/heads/main/hw01/110590041.seg.nrrd" download>
-      https://www.youtube.com/watch?v=-f01y5rwThM
+    <a href="https://youtu.be/-f01y5rwThM?si=SMCNceHsJ1TRF1B3" download>
+      https://youtu.be/-f01y5rwThM?si=SMCNceHsJ1TRF1B3
     </a>
   </div>
 </div>
@@ -287,6 +287,7 @@
 
 </body>
 </html>
+
 
 
 
