--- a/hw02/index.html
+++ b/hw02/index.html
@@ -153,7 +153,7 @@
   <!-- ------------------------------------------------>
   <div class="row hw12">
     <div class="col-md-12 twenty">
-      本次實驗旨在比較 3D U-Net 與 Attention U-Net 在醫療影像分割任務中的表現。由於這是我首次接觸三維影像分割模型，因此整個實作流程包含大量環境設定與參數調整。訓練過程使用 Google Colab 平台，雖然該平台提供免費 GPU 資源，但在實際使用中仍面臨套件版本不一致、連線中斷等問題。透過多次嘗試，我逐步熟悉模型架構與 Colab 的限制，並建立了完整的訓練流程。此次經驗讓我更理解深度學習實驗環境的重要性與雲端資源的侷限。
+      這次作業是用colab來訓練一個可以幫助標記心肌的AI，使用競賽給予的資料和code訓練出一個Ai是一個很有成就的事情。雖然一開始受限於不懂Google drive的用法、網絡流量的限制和colab的gpu日用量限流。導致進度不大，但經過助教的幫忙後成功完成了並了解到如何訓練一個模型。我獲益良多。
   </div>
 
   <!-- ------------------------------------------------>
@@ -263,4 +263,5 @@
 
 </body>
 </html>
+
 
