--- a/hw03/index.html
+++ b/hw03/index.html
@@ -153,7 +153,7 @@
   <!-- ------------------------------------------------>
   <div class="row hw12">
     <div class="col-md-12 twenty">
-      本次實驗旨在比較 3D U-Net 與 Attention U-Net 在醫療影像分割任務中的表現。由於這是我首次接觸三維影像分割模型，因此整個實作流程包含大量環境設定與參數調整。訓練過程使用 Google Colab 平台，雖然該平台提供免費 GPU 資源，但在實際使用中仍面臨套件版本不一致、連線中斷等問題。透過多次嘗試，我逐步熟悉模型架構與 Colab 的限制，並建立了完整的訓練流程。此次經驗讓我更理解深度學習實驗環境的重要性與雲端資源的侷限。
+     這次作業是用code lab來將上一次作業訓練出來的ai去推論沒有標記的心臟圖，把他們標記出心肌。經過上一次作業的教訓，今次十分成功地把成績做出來。最緊張的時候是等待他的成績出來，以為自己上傳失敗，幸好自己是虛驚一場。而且，得到成績的一刻感覺到自己這兩個作業來的學到的東西成功地顯示出來。令我十分滿意。
   </div>
 
   <!-- ------------------------------------------------>
@@ -260,4 +260,5 @@
 
 </body>
 </html>
+
 
