--- a/hw01/index.html
+++ b/hw01/index.html
@@ -200,7 +200,7 @@
           錄影後上傳YouTube(或是直播到YouTube)，影片時間超過三小時。</td>
         </tr>
         <tr>
-          <td><input type="checkbox" class="flipswitch" id="myCheckbox3" checked></td>
+          <td><input type="checkbox" class="flipswitch" id="myCheckbox3"></td>
           <td id='m3'>2</td>
           <td>Strong baseline - 匯出標註好的心臟 nii.gz 檔。 <br>
           Dice-Sørensen coefficient 分數，介於全班前20名。(1pt) <br>
@@ -287,6 +287,7 @@
 
 </body>
 </html>
+
 
 
 
