--- a/hw04/index.html
+++ b/hw04/index.html
@@ -211,7 +211,7 @@
   ------------------------------------------------>
   <div class="row hw12 bottomrow">
     <div class="col-md-12 twenty">
-       Simple 標註
+       Simple 標註 0:22 - 11:22     Medium 標註 17:30 - 26:50
       <iframe width="560" height="315" src="https://www.youtube.com/embed/0KmNjNGZSF8?si=Buu5XMjf2u1KMe0z" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
     </div>
   </div>
@@ -272,6 +272,7 @@
 
 </body>
 </html>
+
 
 
 
