--- a/hw03/index.html
+++ b/hw03/index.html
@@ -200,13 +200,11 @@
       <table>
         <tr>
           <td> Simple Baseline 分數圖片
-          <img src="機械學習_HW3_SP_BL
-.png" width="100%" height="560">
+          <img src="機械學習_HW3_SP_BL.png" width="100%" height="560">
         </tr>
         <tr>
           <td> Medium Baseline 分數圖片
-          <img src="機械學習_HW3_MD_BL
-.png" width="100%" height="560">
+          <img src="機械學習_HW3_MD_BL.png" width="100%" height="560">
         </tr>
       </table>
     </div>
@@ -260,6 +258,7 @@
 
 </body>
 </html>
+
 
 
 
