--- a/hw03/index.html
+++ b/hw03/index.html
@@ -146,7 +146,7 @@
   <!-- ------------------------------------------------>
   <div class="row hw12">
     <div class="col-md-12 twenty">
-      <h1>作業 02</h1>
+      <h1>作業 03</h1>
     </div>
   </div>
 
@@ -200,11 +200,11 @@
       <table>
         <tr>
           <td> Simple Baseline 分數圖片
-          <img src="機械學習_HW3_SP_BL.png" width="100%" height="560">
+          <img src="機械學習_HW3_SP_BL.png" width="100%" height="auto">
         </tr>
         <tr>
           <td> Medium Baseline 分數圖片
-          <img src="機械學習_HW3_MD_BL.png" width="100%" height="560">
+          <img src="機械學習_HW3_MD_BL.png" width="100%" height="auto">
         </tr>
       </table>
     </div>
@@ -258,6 +258,7 @@
 
 </body>
 </html>
+
 
 
 
