--- a/hw06/index.html
+++ b/hw06/index.html
@@ -205,7 +205,7 @@
         </tr>
         <tr>
           <td> Medium Baseline 圖片
-          <img src="HW6_MD_BL.png.png" width="100%" height="auto">
+          <img src="HW6_MD_BL.png" width="100%" height="auto">
         </tr>
       </table>
     </div>
@@ -261,3 +261,4 @@
 
 </body>
 </html>
+
