--- a/hw05/index.html
+++ b/hw05/index.html
@@ -205,7 +205,7 @@
           <img src="HW5_SP_BL.png" width="100%" height="auto">
         </tr>
         <tr>
-          <td> Medium Baseline mAP50 分數圖片，epoch=5，patch=8
+          <td> Medium Baseline mAP50 分數圖片， train 1-35， val 36 - 50
           <img src="HW5_MD_BL.png" width="100%" height="auto">
         </tr>
       </table>
@@ -262,5 +262,6 @@
 
 </body>
 </html>
+
 
 
