--- a/hw04/index.html
+++ b/hw04/index.html
@@ -153,7 +153,7 @@
   <!-- ------------------------------------------------>
   <div class="row hw12">
     <div class="col-md-12 twenty">
-      aaa這次作業讓我又更熟悉使用 Labelme 這個程式做標註，操作起來比之前更加順手。不過在判斷主動脈瓣的位置時，其實還是不是很清楚，尤其是思考到底需要框到哪一個範圍時花了不少時間，感覺還需要再多練習和參考資料來提升判斷能力。雖然過程中有點卡關，但透過這次練習，我也更了解了整個影像標註的完整流程，從載入圖片、建立標籤到完成輸出，步驟算是蠻簡單易懂的。整體來說收穫不少，也對後續處理醫學影像更有概念了。
+      這一次作業令我知道到labelme這個程式，並且知道如何使用他來標註圖片。然後前置使用3DSilcer來將一個一個切片分開成一張png和使用他的內插功能將少量的圖片擴充成我所需要的量。同時間我也了解到主動脈瓣這個東西的形狀和知識。令我更了解人體的構造。雖然標註時，對於究竟屬不屬於這個部位有傳疑。但還是完成了這個作業，也對於標註這個過程了解很多。
     </div>
   </div>
 
@@ -272,6 +272,7 @@
 
 </body>
 </html>
+
 
 
 
