--- a/hw05/index.html
+++ b/hw05/index.html
@@ -153,8 +153,7 @@
   <!-- ------------------------------------------------>
   <div class="row hw12">
     <div class="col-md-12 twenty">
-這次作業的Simple很簡單就完成了，但Medium的部分就花超久，重新train了10幾次，epoch、優化器、學習率等參數狂改，就是沒辦法超過simple的mAP50分數:)，差點瘋掉，
-但後來把batch size變小調成8，j終於就有比較高的分數了。
+這次作業使用YOLO來訓練Ai，十分幸運，我修改他訓練以及驗證的數量（35,15)來訓練他的mAP50直接超過Simple 的分數（0.972>0.963)，經過這次的作業，令我更了解到YoLo的訓練流程，並且提取他的權重檔以及訓練分數，當訓練完成的那一刻十分有成就感。總括來說，我獲益良多。
     </div>
   </div>
 
@@ -262,6 +261,7 @@
 
 </body>
 </html>
+
 
 
 
