--- a/hw06/index.html
+++ b/hw06/index.html
@@ -153,7 +153,7 @@
   <!-- ------------------------------------------------>
   <div class="row hw12">
     <div class="col-md-12 twenty">
-      這次作業讓我學到了把自己訓練完的Yolo權重檔拿去做推論的實作方式，很意外作業5好不容易弄出比simple還高的AP分數權重檔，在作業六的推論分數會比Simple還低分，話說競賽二的分數跟競賽一真的落差極大，yolo隨便訓練都有90以上的分數，讓人看了會有成就感。
+      這次作業使用上一次作業的權重檔，去推論給予的測試檔。很意外地，medium的AP分數明明比simple更高，但推論後在官網給予的分數比simple 低分，有可能是訓練與驗證的筆數修改後影響到。總之成功地使用訓練後的權重檔來作推論並提交上去。經過這次作業令我成功完成了一整個流程，令我更了解ai訓練這個過程當中的程式碼以及需要注意的事項。
     </div>
   </div>
 
@@ -261,4 +261,5 @@
 
 </body>
 </html>
+
 
