--- a/hw01/index.html
+++ b/hw01/index.html
@@ -220,7 +220,7 @@
   <div class="row hw12 bottomrow">
     <div class="col-md-12 twenty">
       <div class="video-container">
-      <iframe src="https://youtu.be/-f01y5rwThM?si=SMCNceHsJ1TRF1B3"title="YouTube video player"allowfullscreen></iframe>
+      <iframe width="100%" height="560" src="https://www.youtube.com/embed/-f01y5rwThM?si=kgw7EVxLqHdOrPm4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
       </div>
     </div>
   </div>
@@ -287,6 +287,7 @@
 
 </body>
 </html>
+
 
 
 
